--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,18 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Bitter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 html {
     scroll-behavior: smooth;
 }
 
 :root {
-    --primary-color: #1e39a5;
+    --primary-color: #295025;
+    --secondry-color: #0e5540;
+    --third-color: #960047;
+    --forth-color: #f4a620;
+    --tarnsition: 500ms ease-in-out;
 }
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Bitter', serif;
 }
 
 a {
@@ -35,6 +41,7 @@ header {
     width: 100%;
     background-color: white;
     top: 0;
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
 
 .hamburger {
@@ -115,13 +122,13 @@ header {
 }
 
 .nav-items ul li a {
-    color: black;
+    color: var(--secondry-color);
     font-size: 17px;
     font-weight: 500;
 }
 
 .nav-items ul li a:hover {
-    color: var(--primary-color);
+    color: var(--third-color);
     cursor: pointer;
 }
 
@@ -131,345 +138,152 @@ header {
 }
 
 .nav-btn a:hover {
-    background-color: black;
+    background-color: var(--forth-color);
 }
 
 .nav-btn a {
-    background-color: var(--primary-color);
+    background-color: var(--secondry-color);
     text-decoration: none;
     padding: 7px 13px;
     font-size: 13px;
-
-}
-
-.nav-btn a {
-    text-decoration: none;
     color: white;
     border-radius: 20px;
+
 }
 
-.submit-btn {
-    display: flex;
-    align-items: center;
+
+/* Hero Section  */
+
+
+#herosec {
+    width: 100%;
+    height: 90vh;
+    background: url(../images/2.png);
+
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: right;
+    margin-top: 67px;
 }
 
-#submit {
-    padding: 10px 0px;
-    display: none;
-}
-
-#verify {
-    background-color: rgb(11, 244, 11);
+::placeholder,
+select {
     color: white;
-    padding: 0px 20px;
-    height: 30px;
-    border: none;
-    border-radius: 10px;
-}
-
-.checked{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    font-size: 12px;
-}
-
-
-/* ############################ Hero Section ######################## */
-
-
-
-
-#hero-section {
-    display: grid;
-    margin-top: 120px;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    padding: 10px;
-    gap: 10px;
 
 }
+
+select {
+    color: white;
+}
+
+option {
+    background-color: var(--forth-color);
+}
+
 
 form {
+    width: 50%;
+    height: 90vh;
     display: grid;
-    row-gap: 20px;
-    padding: 5%;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    border-radius: 30px;
-
-
-}
-
-
-.form-cont h1 {
+    gap: 20px;
     text-align: center;
-    font-weight: 400;
-    font-size: 22px;
+    padding: 20px 5%;
+    color: white;
+    background: linear-gradient(rgba(34,
+                33,
+                34,
+                0.6), rgba(34, 33, 34, 0.6));
 }
 
-.form-cont div {
-    display: flex;
-    gap: 5%;
-}
-
-.form-cont input,
-.form-cont select {
-    width: 49%;
+form input,
+form select,
+form textarea {
     padding: 10px;
-    border: none;
-    border-bottom: 1px solid black;
     background-color: transparent;
-    color: var(--primary-color);
-    font-weight: 500;
+    border: none;
+    border-bottom: 1px solid white;
+    color: white;
     font-size: 15px;
+    font-weight: 300;
 }
 
-.form-cont textarea {
-    padding: 10px;
-    border: none;
-    border-bottom: 1px solid black;
-    background-color: transparent;
+form h1 {
+    font-size: 30px;
+    font-weight: 500;
+    font-family: 'Bitter', serif;
 }
 
 #submit {
-    border: none;
-    background: var(--primary-color);
+    background-color: var(--primary-color);
     color: white;
-    width: 200px;
+    border: none;
     border-radius: 10px;
+    padding: 10px 30px;
+    font-weight: 500;
+    letter-spacing: 2px;
+
 }
 
 #submit:hover {
-    background-color: black;
-    transition: 0.3s;
+    background-color: var(--forth-color);
+    transition: var(--tarnsition);
 }
 
-.submit-btn {
-    display: flex;
-    justify-content: flex-end;
-
-}
-
-/* ############################ Best Services Section ######################## */
 
 
-#best-service {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 5%;
+/* company information */
 
-}
 
-#best-service div {
-    display: grid;
-    align-items: center;
-}
-
-#best-service img {
-    width: 90%;
+#comp-info{
+    text-align: center;
+    max-width: 750px;
     margin: auto;
-}
-
-.bestservice-text h1 {
-    color: var(--primary-color);
-    margin: 20px;
-    text-align: left;
-}
-
-.bestservice-text p {
-    text-align: justify;
-    font-size: 14px;
-    /* color: #7a7787; */
-    font-weight: 400;
-}
-
-/* ############################ project ribben Section ######################## */
-
-#project-ribben {
-    background-color: var(--primary-color);
-    color: white;
     padding: 50px 0px;
 }
 
-.ribben-tags {
+#comp-info h1{
+    margin: 30px;
+    color: var(--primary-color);
+    font-size: 30px;
+    font-weight: 700;
+    padding: 0px 20px;
+}
+#comp-info p{
+    line-height: 24px;
+    text-align: justify;
+    letter-spacing: 0.5px;
+    font-weight: 400;
+    padding: 0px 20px;
+}
+
+
+/* ribben section  */
+
+
+#ribben{
+    background-color: var(--secondry-color);
+    color: white;
     display: flex;
-    max-width: 1180px;
-    margin: auto;
-    text-align: center;
     justify-content: center;
-    font-size: 20px;
 }
 
-.ribben-tags div {
-    border-right: 1px solid;
-    padding: 0px 3%;
-}
-
-.ribben-tags>div :first-child {
-    font-weight: 800;
-    letter-spacing: 1px;
-    font-size: 25px;
-}
-
-.ribben-tags> :last-child {
-    border: none;
-}
-
-
-/* ############################ Services Section ######################## */
-
-#our-service {
-    /* text-align: center; */
-    max-width: 1180px;
-    margin: auto;
-    padding: 30px 10px;
-    display: grid;
-    row-gap: 20px;
-
-}
-
-#our-service>p {
-    max-width: 750px;
-    margin: 10px auto;
-    font-weight: 300;
-    font-size: 20px;
-    text-align: center;
-
-}
-
-#our-service>h1 {
-    max-width: 550px;
-    margin: 10px auto;
-
-}
-
-#our-service>div {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 40px;
-
-
-}
-
-.service-card img {
-    width: 50px;
-}
-
-.service-card {
+#ribben > div{
     display: flex;
-    flex-direction: column;
-    gap: 10px;
-    justify-items: center;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    align-items: center;
+    padding: 50px;
+}
+
+#ribben>div>:last-child {
+border: none;
+}
+#ribben>div>div{
     padding: 20px;
-    border-radius: 20px;
-}
-
-.service-card ul {
-    align-self: flex-start;
-}
-
-.service-card ul li {
-    list-style: none;
-    font-weight: 400;
-    font-size: 14px;
-}
-
-.service-card p {
-    font-weight: 400;
-    font-size: 14px;
-}
-
-/* ############################ testimonial ######################## */
-
-/* i have use some project ribben classe here. because of the same structure */
-
-.testimonials {
-    display: grid;
-    padding: 0px 10px;
-}
-
-.testimonials> :nth-child(3) {
-    max-width: 650px;
-    margin: 20px 0px;
-    font-weight: 300;
-    font-size: 17px;
-}
-
-.testimonials h1{
-    font-size: 25px;
-    font-weight: 400;
-}
-.testimonials h2{
-    font-size: 25px;
-    font-weight: 400;
-}
-.testimonials p{
-    font-size: 16px;
-    font-weight: 300;
-}
-
-/* ############################ client ######################## */
-
-.client {
     text-align: center;
-    padding: 30px 0px;
-    max-width: 1130px;
-    margin: auto;
+    border-right: 1px solid white;
 }
 
-.client>div {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: center;
-    align-items: center;
-}
-
-.client h1 {
-    margin: 20px 0px;
-}
-
-.client img {
-    width: 100px;
-}
-
-/* ############################ footer ######################## */
-
-footer {
-    background-color: rgb(185, 181, 181);
-    color: black;
-    padding: 30px 20px;
-    display: grid;
-}
-
-
-footer img {
-    width: 150px;
-}
-
-footer > div {
-    display: flex;
-}
-
-#map {
-    filter: invert();
-}
-
-footer .co-info {
-    display: grid;
-    row-gap: 10px;
-}
-
-footer a{
-    text-decoration: none;
-    color: inherit;
-}
-
-footer>:last-child {    
-    margin-top: 30px;
-    padding-top: 30px;
-    padding-left: 10px;
-    border-top: 1px solid grey;
+#ribben>div>div>p{
+    margin: 5px;
+    font-size: 25px;
+    font-weight: 700;
+    
 }
