--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -424,7 +424,7 @@ form h1 {
     color: var(--primary-color);
     font-size: 50px;
     font-weight: 700;
-    
+    margin-bottom: 30px;
 }
 
 #clients img{
