--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -179,7 +179,7 @@ select {
 }
 
 option {
-    background-color: var(--forth-color);
+    background-color: var(--secondry-color);
 }
 
 
@@ -360,7 +360,6 @@ form h1 {
     color: var(--primary-color);
     font-size: 16px;
     margin-bottom: 20px;
-    text-align: justify;
     max-width: 250px;
     margin: auto;
 }
