--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -191,10 +191,7 @@ form {
     text-align: center;
     padding: 20px 5%;
     color: white;
-    background: linear-gradient(rgba(34,
-                33,
-                34,
-                0.6), rgba(34, 33, 34, 0.6));
+    background: linear-gradient(rgba(13, 12, 13, 0.8), rgba(34, 33, 34, 0.8));
 }
 
 form input,
@@ -205,18 +202,19 @@ form textarea {
     border: none;
     border-bottom: 1px solid white;
     color: white;
-    font-size: 15px;
-    font-weight: 300;
+    font-size: 19px;
+    font-weight: 400;
+    letter-spacing: 0.7px;
 }
 
 form h1 {
     font-size: 30px;
-    font-weight: 500;
+    font-weight: 700;
     font-family: 'Bitter', serif;
 }
 
 #submit {
-    background-color: var(--primary-color);
+    background-color: var(--secondry-color);
     color: white;
     border: none;
     border-radius: 10px;
